Fixed scrollbar for project modal

--- a/app/src/styles/Projects.module.css
+++ b/app/src/styles/Projects.module.css
@@ -59,6 +59,7 @@
   border-radius: 30px;
   box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.4);
   cursor: pointer;
+  overflow: hidden;
 }
 
 .projectImage {
@@ -90,12 +91,44 @@
 
 .modal {
   width: 60%;
-
+  max-height: 90%;
+  height: 90%;
+  margin-top: 50px;
   background-color: #21212b;
   position: fixed;
   border-radius: 30px;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
 }
 
+.modal::-webkit-scrollbar {
+  display: none;
+}
+
+.scrollhost {
+  overflow: auto;
+  height: 100%;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+  position: relative;
+}
+.scroll_bar {
+  width: 10px;
+  height: 90%;
+
+  position: absolute;
+  right: 10px;
+  top: 5%;
+
+  border-radius: 7px;
+  bottom: 0px;
+  background-color: rgba(0, 0, 0, 0.35);
+  overflow: hidden;
+}
+
+.scrollhost::-webkit-scrollbar {
+  display: none;
+}
 .modalImage {
   width: 100%;
   height: 300px;
@@ -105,9 +138,30 @@
   border-radius: 30px;
 }
 
+.scroll_thumb {
+  width: 8px;
+  height: 20px;
+  margin-left: 1px;
+  position: absolute;
+  border-radius: 7px;
+  opacity: 1;
+  top: 0;
+  background-color: rgba(0, 0, 0, 0.55);
+}
 .modalText {
   width: 100%;
   height: 60%;
+  padding: 20px;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 50px;
+}
+
+.modalDescription {
+  width: 80%;
+  height: 100%;
+
   padding: 20px;
   color: white;
 }
